Fixed spacing issues from font change

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -6,7 +6,7 @@
 	font-family: @font-playfair;
 	font-size: 1.4375rem;
 	line-height: 1.4375rem;
-	padding: 10px 15px;
+	padding: 8px 15px 12px;
 	text-decoration: none;
 	transition: @default-transition;
 	
@@ -18,6 +18,6 @@
 	&--small {
 		font-size: 1.25rem;
 		line-height: 1.25rem;
-		padding: 8px 12px;
+		padding: 7px 12px 9px;
 	}
 }
