--- a/less/contact.less
+++ b/less/contact.less
@@ -1,7 +1,6 @@
 .ss-contact {
 	.ss-text-header {
 		color: #f9f3e4;
-		font-family: @font-source-serif;
 		margin: 0 0 40px;
 	}
 }
