--- a/less/header.less
+++ b/less/header.less
@@ -57,12 +57,12 @@
 }
 
 .ss-nav {
-	margin: 20px auto 0;
+	margin: 15px auto 0;
 	text-align: center;
 	width: 100%;
 	
 	@media all and (max-width:@break-tablet) {
-		margin: 12px auto 0;
+		margin: 10px auto 0;
 	}
 	
 	&__item {
