--- a/less/typography.less
+++ b/less/typography.less
@@ -37,28 +37,28 @@
 		background-image: -o-linear-gradient(transparent, transparent);
 		color: #e7e2d5;
 		font-size: 4.5rem;
-		line-height: 4.5rem;
-		margin: 40px 0 0;
+		line-height: 6rem;
+		margin: 30px 0 0;
 		text-align: center;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 		
 		@media all and (max-width:@break-desktop) {
 			font-size: 3.5rem;
-			line-height: 3.5rem;
-			margin: 30px 0 0;
+			line-height: 4rem;
+			margin: 17px 0 0;
 		}
 		
 		@media all and (max-width:@break-tablet) {
 			font-size: 2.75rem;
-			line-height: 2.75rem;
-			margin: 15px 0 0;
+			line-height: 3.25rem;
+			margin: 10px 0 0;
 		}
 		
 		@media all and (max-width:@break-mobile) {
 			font-size: 2.25rem;
-			line-height: 2.25rem;
-			margin: 10px 0 0 0;
+			line-height: 2.75rem;
+			margin: 8px 0 0 0;
 		}
 	}
 	
